# p2p-chat

./: CHANGELOG.md  Chat.cabal  README.org  default.nix  shell.nix
app/: Client.hs  Main.hs  P2P.hs  Server.hs
src/Chat/: Helpers.hs
