cabal-version:      2.4
name:               Chat
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             James Leslie
maintainer:         jamesleslie314@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Chat
    main-is:          Main.hs

    build-depends:    base ^>=4.14.1.0,
                      bytestring >= 0.10.12.0,
                      network >= 3.1.2.1
    hs-source-dirs:   app
    default-language: Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Chat.Helpers
  build-depends:       base ^>=4.14.1.0,
                       bytestring >= 0.10.12.0,
                       network >= 3.1.2.1

executable Server
    main-is:          Server.hs

    build-depends:    base ^>=4.14.1.0,
                      bytestring >= 0.10.12.0,
                      network >= 3.1.2.1,
                      Chat

    hs-source-dirs:   app
    ghc-options:      -main-is Server
    default-language: Haskell2010


executable Client
    main-is:          Client.hs

    build-depends:    base ^>=4.14.1.0,
                      bytestring >= 0.10.12.0,
                      network >= 3.1.2.1,
                      Chat
    hs-source-dirs:   app
    ghc-options:      -main-is Client
    default-language: Haskell2010


executable P2P
    main-is:          P2P.hs

    build-depends:    base ^>=4.14.1.0,
                      bytestring >= 0.10.12.0,
                      network >= 3.1.2.1,
                      Chat
    hs-source-dirs:   app
    ghc-options:      -main-is P2P
    default-language: Haskell2010